fix #127 - make Side-bar collapsible a-la GA; it works in pair with previous Fullsceen toggler; fixed Side-bar layout on mobile (was completely broken)

--- a/static/css/app/components.less
+++ b/static/css/app/components.less
@@ -77,15 +77,6 @@
     color: #428BCA;
   }
 }
-/*
-* App Header
-*/
-.page-title {
-  margin: 0 0 20px;
-}
-.page-spacer {
-  margin-bottom: 15px;
-}
 
 /*
 * Notifications
@@ -462,39 +453,82 @@
 /*
 * Side-bar menu
 */
-.side-bar {
-  .menu-item {
-    position: relative;
-    a {
-      display: block;
-      padding: 5px 0;
-      text-decoration: none;
+.sidebar-container {
+  background-color: @app-body-bg;
+  @media (max-width: @grid-float-breakpoint) {
+    box-shadow: 1px 0 10px -2px rgba(0,0,0,.4);
+    .full-screen & {
+      box-shadow: none;
     }
-    &.active {
-      margin-left: -15px;
-      padding-left: 11px;
-      border-left: 4px solid @brand-primary;
-      background-color: #DCDCDC;
-      box-shadow: 0 1px 0 0 #F0F0F0, 0 -1px 0 0 #BFBFBF;
-      font-weight: bold;
+  }
+
+  .sidebar-toggler {
+    button {
+      padding: 3px 4px;
+      border: 1px solid lighten(@hr-border, 7%);
+      outline: none;
+      background-color: @app-body-bg;
+      transition: background-color .3s;
+
+      &:hover {
+        background-color: darken(@app-body-bg, 10%);
+      }
+
+      .full-screen & {
+        .fa {
+          transform: rotate(180deg);
+        }
+      }
     }
-    &:hover:not(.active) {
-      margin-left: -15px;
-      padding-left: 15px;
-      background-color: #e5e5e5;
-    }
-    .label {
+  }
+
+  .sidebar-scroll {
+    // Top shadow
+    /*&:after {
+      content: "";
       position: absolute;
-      right: 5px; top: 5px;
-      padding: 0.2em 0.4em;
+      width: 100%;
+      top: -28px;
+      height: 20px;
+      box-shadow: 0 5px 12px 3px rgba(0,0,0,.3);
+      border-radius: 0 0 90% 90%;
+    }*/
+  }
+
+  .sidebar-menu {
+    .menu-item {
+      position: relative;
+      a {
+        display: block;
+        padding: 5px 0;
+        text-decoration: none;
+      }
+      &.active {
+        margin-left: -15px;
+        padding-left: 11px;
+        border-left: 4px solid @brand-primary;
+        background-color: #DCDCDC;
+        box-shadow: 0 1px 0 0 #F0F0F0, 0 -1px 0 0 #BFBFBF;
+        font-weight: bold;
+      }
+      &:hover:not(.active) {
+        margin-left: -15px;
+        padding-left: 15px;
+        background-color: #e5e5e5;
+      }
+      .label {
+        position: absolute;
+        right: 5px; top: 5px;
+        padding: 0.2em 0.4em;
+      }
     }
-  }
-  h4.menu-item {
-    margin: 5px 0;
-  }
-  .list-item {
-    line-height: 16px;
-    margin-bottom: 10px;
+    h4.menu-item {
+      margin: 5px 0;
+    }
+    .list-item {
+      line-height: 16px;
+      margin-bottom: 10px;
+    }
   }
 }
 
@@ -523,9 +557,8 @@
     .center-square(24px);
     color: #fff;
   }
-}
-.content-col.full {
-  .fullscreen-toggle {
+
+  .full-screen & {
     right: 0;
     width: 30px;
     .fa {
@@ -533,6 +566,7 @@
     }
   }
 }
+
 // Hidden if not lg
 @media (min-width: @screen-lg-min) {
   &.has-fullscreen-toggle {
