--- a/static/css/app/elements.less
+++ b/static/css/app/elements.less
@@ -2,10 +2,9 @@
 * Standard elements
 */
 
-/* Move down content because we have a fixed navbar that is 50px tall */
+@app-body-bg: #ececec;
 body {
-  padding-top: 70px;
-  background: #ececec;
+  background: @app-body-bg;
 }
 
 ul {
